<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/icons_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/account_hor_margin"
    android:paddingRight="@dimen/account_hor_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LogInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/account_ver_margin"
        android:layout_marginTop="@dimen/account_ver_margin"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_custom"
        android:orientation="horizontal">


        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/fa_icon_email"
            android:textColor="#fff"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginBottom="40dp"
        android:background="@drawable/edit_text_custom"
        android:orientation="horizontal">


        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/fa_icon_password"
            android:textColor="#fff"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="18"
            android:maxLines="1"
            android:textColor="#fff"
            android:textColorHint="#fff" />

    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_custom"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#fff" />

</LinearLayout>