<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.ul.postgrad.socialanxietyapp.account.WelcomeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/account_ver_margin"
        android:layout_marginTop="@dimen/account_ver_margin"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="20dp"

            android:drawableStart="@drawable/ic_sign_up"
            android:drawableTint="@color/white"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/field_height"
            android:layout_marginBottom="30dp"

            android:drawableStart="@drawable/ic_login"
            android:drawableTint="@color/white"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


</LinearLayout>
