<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_self_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.ul.postgrad.socialanxietyapp.SelfRatingActivity">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/anxiety_rate_title"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/rating_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:text="Rating: 0"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:layout_marginStart="20dp"
            android:text="@string/anxiety_scale_lvl_1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />


    </LinearLayout>

    <android.widget.VerticalSeekBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="27dp"
        android:scrollbarSize="40dp" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@drawable/button_custom"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</RelativeLayout>
